monitoring/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:471744311643:certificate/a230a5d9-f1c9-4e21-b87e-4ad4ec11901e"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /grafana/
spec:
  ingressClassName: alb
  rules:
    - host: datascientets-socks-shop.com
      http:
        paths:
          - path: /grafana/*
            pathType: Prefix
            backend:
              service:
                name: monitoring-release-grafana
                port:
                  number: 80
    - host: www.datascientets-socks-shop.com
      http:
        paths:
          - path: /grafana/*
            pathType: Prefix
            backend:
              service:
                name: monitoring-release-grafana
                port:
                  number: 80
